# VDT-Studio

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  VDT_STUDIO_DEVELOPMENT_PLAN_FOR_CODEX.md  VDT_STUDIO_SEAMLESS_LOCAL_AI_AND_ALPHA_PLAN.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/sidecars/: vdt-local-runtime  vdt-local-runtime.cmd  vdt-local-runtime.manifest.json  vdt-local-runtime.mjs
apps/desktop/src-tauri/sidecars/vdt-agent-skills/: registry.md
apps/desktop/src-tauri/sidecars/vdt-agent-skills/generic/: logical-kpi-decomposition.md
apps/desktop/src-tauri/sidecars/vdt-agent-skills/mining/: block-preparation-dozer.md  drill-and-blast.md  excavation-loading.md  haulage-truck-cycle.md  material-allocation-ore-waste.md  mine-production-system.md  production-volume.md  underground-production-cycle.md
apps/desktop/src-tauri/sidecars/vdt-agent-skills/mining/references/: equipment-catalog.yaml
apps/desktop/src-tauri/sidecars/vdt-agent-skills/saas/: funnel-growth.md
apps/desktop/src-tauri/src/: lib.rs  main.rs  sidecar_host.rs
docs/: AGENTIC_VDT_RUNTIME_SPEC.md  AGENT_PLANS.md  AI_HARNESS.md  ARCHITECTURE.md  DESIGN_SYSTEM.md  FORMULA_ENGINE.md  LOCAL_RUNNER.md  MCP_AND_CLI.md  PRODUCTION_READINESS.md  PRODUCT_SPEC.md  RELEASE.md  ROADMAP.md  RUNTIME_MIGRATION.md  VDT_AgentDecision_ToolLoop_TZ.md  VDT_Agent_Harness_TZ.md  VDT_SKILL_LIBRARY_SEED_PROMPT.md  (+3 more)
(+212 files in other folders)
