[package]
name = "vdt-studio-desktop"
version = "0.1.0-alpha.0"
description = "VDT Studio Desktop app"
authors = ["VDT Studio"]
edition = "2021"
license = "MIT"

[lib]
name = "vdt_studio_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
